--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -132,8 +132,9 @@ services:
     working_dir: /etc/hyperledger
     volumes:
     - /var/run/:/host/var/run/
-    - ./chaincode:/opt/chaincode
-    - ./chaincode/go:/opt/gopath/src
+    - ${GOPATH}:/opt/gopath
+    # - ./chaincode/go:/opt/gopath/src/chaincode
+    - ./chaincode/go:/opt/gopath/src/chaincode
     - ./crypto-config:/etc/hyperledger/crypto-config
     - ${FABRIC_STARTER_HOME:-.}/templates:/etc/hyperledger/templates
     - ./crypto-config/peerOrganizations/${ORG:-org1}.${DOMAIN:-example.com}/users/Admin@${ORG:-org1}.${DOMAIN:-example.com}:/etc/hyperledger/crypto/peeradmin
