--- a/docker-compose-orderer.yaml
+++ b/docker-compose-orderer.yaml
@@ -13,6 +13,7 @@ services:
     container_name: orderer.${DOMAIN:-example.com}
     image: hyperledger/fabric-orderer:${FABRIC_VERSION:-latest}
     environment:
+      - FABRIC_LOGGING_SPEC=debug
       - ORDERER_GENERAL_LOGLEVEL=debug
       - ORDERER_GENERAL_LISTENADDRESS=0.0.0.0
       - ORDERER_GENERAL_GENESISMETHOD=file
