--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -179,6 +179,21 @@ services:
 #      - ${WWW_PORT:-8081}:80
     volumes:
       - ./crypto-config/peerOrganizations/${ORG:-org1}.${DOMAIN:-example.com}/msp:/usr/share/nginx/html/msp
+  backend:
+      container_name: backend.${ORG:-org1}.${DOMAIN:-example.com}
+      image: openjdk:jre-alpine
+      # volumes: 
+      #   - ./backend:/opt/backend #CHANGE ME
+      volumes:
+      - ${WORK_DIR-/home/docker}/backend:/opt/backend
+      environment:
+        - API_HOST=api.${ORG:-org1}.${DOMAIN:-example.com}
+        - API_PORT=4000
+      depends_on: 
+        - api
+      command: java -jar /opt/backend/factoring.jar
+      ports: 
+        - 5500:5500
 
 networks:
   default:
