--- a/chaincode/java/factoring/build.gradle
+++ b/chaincode/java/factoring/build.gradle
@@ -12,7 +12,7 @@ compileScala.targetCompatibility = 1.8
 
 dependencies {
     compile 'org.scala-lang:scala-library:2.12.0'
-    compile 'com.github.apolubelov.fabric-contract-base:fabric-contract-base:1.0.0-pre-alpha-10'
+    compile 'com.github.apolubelov.fabric-contract-base:fabric-contract-base:1.4.0.12'
 
     // testing libraries
     testCompile 'junit:junit:4.12'
@@ -22,10 +22,11 @@ dependencies {
 
 repositories {
     mavenLocal()
-    maven { url 'https://nexus.hyperledger.org/content/repositories/releases' }
-    maven { url 'https://dl.bintray.com/apolubelov/hyperledger-fabric-extensions' }
     mavenCentral()
     jcenter()
+    maven {
+        url 'https://dl.bintray.com/apolubelov/hyperledger-fabric-extensions'
+    }
 }
 
 shadowJar {
