tweak channel create

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -172,7 +172,7 @@ services:
       - CORE_PEER_TLS_KEY_FILE=/etc/hyperledger/crypto/peer/tls/server.key
       - CORE_PEER_TLS_CERT_FILE=/etc/hyperledger/crypto/peer/tls/server.crt
       - CORE_PEER_TLS_ROOTCERT_FILE=/etc/hyperledger/crypto/peer/tls/ca.crt
-      - PEER0_PORT
+      - PEER0_PORT=${PEER0_PORT:-7051}
     working_dir: /etc/hyperledger
     depends_on:
       - peer0
