--- a/factor-network/custom_port_config.json
+++ b/factor-network/custom_port_config.json
@@ -3,9 +3,9 @@
         "peerAddress": "peer0.org1.example.com:7061"
     },
     "mvm": {
-        "peerAddress": "peer0.mvm.example.com:7051"
+        "peerAddress": "peer0.mvm.factoring:7051"
     },
     "alfabank": {
-        "peerAddress": "peer0.alfabank.example.com:7061"
+        "peerAddress": "peer0.alfabank.factoring:7061"
     }
 }
