--- a/factor-network/factoring.yaml
+++ b/factor-network/factoring.yaml
@@ -9,7 +9,7 @@ services:
       links: 
         - api:api
       environment:
-        - API_HOST=api
+        - API_HOST=api.${ORG:-org1}.${DOMAIN:-example.com}
         - API_PORT=3000
         - ORG
       command: java -jar /opt/backend/factoring.jar
@@ -21,4 +21,8 @@ services:
       - ./factor-network:/etc/factor-network
     environment:
       - CUSTOM_PORT_CONFIG #/etc/factor-network/custom_port_config.json
-      
+
+networks:
+  default:
+    external:
+      name: fabric-starter_default
